# rag-comparisons

./: .env.example  .gitignore  Makefile  pyproject.toml  requirements.txt
config/: benchmark.yaml
notebooks/: hotpot_metric_autopsy.ipynb  multihop_rag_bench.ipynb  rag_benchmark.ipynb  rag_benchmark_executed.ipynb
results/: accuracy_enriched.csv  accuracy_results.csv  choose_over_examples.csv  dual_scoreboard.csv  engineering_briefing.md  engineering_scorecard.csv  engineering_scorecard.json  graphrag_bench_question_catalog.csv  latency_results.csv  metric_breakdown_by_method.csv  metric_disagreement.json  multihop_question_catalog.csv  pairwise_win_rates.csv  question_catalog.csv  recent_rag_benchmarks.md  routing_cheatsheet.md  routing_recommendations.csv  scenario_results.csv  summary.csv  summary.json  token_results.csv
results_graphrag_bench/: README.md  accuracy_enriched.csv  accuracy_results.csv  by_question_type.csv  choose_over_examples.csv  dual_scoreboard.csv  engineering_briefing.md  engineering_scorecard.csv  engineering_scorecard.json  latency_results.csv  metric_breakdown_by_method.csv  metric_disagreement.json  pairwise_win_rates.csv  question_catalog.csv  routing_cheatsheet.md  routing_recommendations.csv  scenario_results.csv  summary.csv  token_results.csv
results_multihop/: README.md  accuracy_enriched.csv  accuracy_results.csv  by_question_type.csv  choose_over_examples.csv  dual_scoreboard.csv  engineering_briefing.md  engineering_scorecard.csv  engineering_scorecard.json  latency_results.csv  metric_breakdown_by_method.csv  summary.csv  (+7 more)
(+105 files in other folders)
